--- a/style/estilopersonal.css
+++ b/style/estilopersonal.css
@@ -30,42 +30,67 @@ h5.nombre{
 }
 
 /*index*/
-nav{
-    background-color: #1a1a2e;
-    text-align: right;
-    
-}
-
-nav a{
-    text-decoration:none;
-    color:inherit;
-    font-size:14px;
-    } 
-    nav li{
-    display:inline-block;
-    width:10%;
-    padding:5px;
-    background-color:#1a1a2e;
-    border:1px solid #1a1a2e;
-    text-align:center;
-    color:#fff;
-    font-family: kiona;
-    font-weight: 300;
-    }
-    nav li:hover{
-    background-color:#fff;
-    color:#1a1a2e;
-    }
-#main-header {
-    position: fixed;
+header{
+	position: fixed;
     z-index:1;
     top: 0;
     width: 100%;
-    height: 100px;
-
+    height: 200px;
 }
 
+.navegacion{
+	width: 100%;
+	background-color: #1a1a2e;
+    text-align: right;
+   
+}
 
+.navegacion ul{
+	list-style: none;
+}
+
+.menuul > li{
+	position: relative;
+    display: inline-block;
+}
+
+.menuul > li > a{
+	display: block;
+    padding: 15px 20px;
+    color: white; 
+    font-family: kiona;
+	text-decoration: none;
+}
+
+.menuul li :hover{
+	/*color: #CE7D35;
+    transition: all .2s;*/
+    background-color:#fff;
+    color:#1a1a2e;
+}
+
+/* Submenu*/
+
+.submenu{
+	position: absolute;
+	background: #333333;
+	width: 120%;
+	visibility: hidden;
+	opacity: 0;
+	transition: opacity 1s;
+}
+
+.submenu li a{
+	display: block;
+	padding: 15px;
+	color: #fff;
+	text-decoration: none;
+}
+
+.menuul li:hover .submenu{
+	visibility: visible;
+	opacity: 1;
+}
 
 #fondo{
     background-image: url(../img/fondo.jpg);
@@ -108,6 +133,8 @@ a.icons1{
     align-content: center;
     text-align: center;
     color: white;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
 a.boton1{
@@ -129,18 +156,17 @@ p.cita{
 body{
     background-color: #f8f8f8;
     font-family: 'Nunito', serif;
-
 }
 
 footer{
     background-color: #1a1a2e;
     text-align: center;
-    position: static;
-   left:0px;
-   bottom:0px;
-   width:100%;
-   height: 100%;
     color: white;
+    position: initial;
+    bottom: 0px;
+    width: 100%;
+    height: auto;
+    padding-bottom: 1%;
 }
 
 iframe{
@@ -184,7 +210,7 @@ div.body{
     
   }
   
-  ul, li {
+ ul, li {
       padding: 0;
       margin: 0;
       list-style: none;
@@ -242,6 +268,10 @@ div.body{
     height: 5px;
     font-size: 15px;
     border-radius: 100%;
+  }
+
+  .nav>li{
+      float: left;
   }
 
   span{
