--- a/style/a.css
+++ b/style/a.css
@@ -456,81 +456,145 @@ div.fullwidth{
 
 .pad-10{
   padding-left: 5%;
-  padding-right: 5%;
+  padding-right: 5%;}
+/*social bar inicio*/
+.container-bar{
+  width: 100%;
+  max-width: 55px;
+  position: fixed;
+  left: 0;
+  top: 25%;
+  z-index: 9;
 }
-/*slider inicio*/
-.container1{
-  margin: auto;
-  background-color: white;
-  width: 70%;
-  padding: 30px;
- 
+.container-bar a{
+  display: block;
+  padding: 15px;
+  text-decoration: none;
+  font-size: 17px;
+  position: relative;
+  transition: all 500ms ease;
+  color: #fff;
+  text-align: center;
+}
+.container-bar a:hover{
+  background: #1c1c1c;
+}
+.container-bar .icon-facebook{
+  background: #3b5998;
+  border-radius: 0px 5px 0px 0px;
+}
+.container-bar .icon-youtube{
+  background: #e52a23;
+}
+.container-bar .icon-twitter{
+  background: #00acee;
+}
+.container-bar .icon-correo{
+  background: #747473;
+}
+.container-bar .icon-pinterest{
+  background: #c8232c;
+}
+.container-bar .icon-google{
+  background: #db4a39;
+  border-radius: 0px 0px 5px 0px;
+}
+.container-bar .title{
+  position: fixed;
+  background: #1c1c1c;
+  padding: 6px;
+  border-radius: 3px;
+  font-size: 15px;
+  margin-top: -4px;
+  transition: all 500ms ease;
+  opacity: 0;
+  visibility: hidden;
+  z-index: -1;
+}
+.container-bar a:hover .title{
+  opacity: 1;
+  visibility: visible;
+  margin-left: 30px;
+  font-family: Poppins;
+}
+.container-bar .title:after{
+  position: absolute;
+  content: '';
+  border-left: 6px solid transparent;
+  border-right: 5px solid #1c1c1c;
+  border-top: 6px solid transparent;
+  border-bottom: 6px solid transparent;
+  right: 100%;
+  top: 8px;
+}
+#btn-social{
+  display: none;
+}
+.icon-play-1{
+  cursor: pointer;
+  transition: all 0.4s;
+  font-size: 17px;
+  margin-bottom: 2px;
+  margin-left: 4px;
+  display: inline-block;
+  transform: rotate(180deg);
+  color: #49b0e6;
+  font-weight: bold;
+}
+#btn-social:checked ~.icon-play-1{
+  transform: rotate(0deg);
+}
+.icon-social{
+  transition: all 0.4s;
+  transform: translateX(0%);
+  box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
+}
+#btn-social:checked ~ .icon-social{
+  transform: translateX(-100%);
+}
+/*social bar fin*/
+div.item{
+  width: auto;
+  height: 700px;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   
 }
-
-ul, li {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
-ul.slider{
-  position: relative;
-  width: auto;
-  height: 300px;
-}
-
-ul.slider li {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    opacity: 0;
-    width: inherit;
-    height: inherit;
-    transition: opacity .5s;
-    background:#fff;
-}
-
-ul.slider li img{
+.item img{
   width: 100%;
-  height: 300px;
-  object-fit: cover;
+  height: 700px;
 }
-
-ul.slider li:first-child {
-    opacity: 1; /*Mostramos el primer <li>*/
+@media (max-width: 600px) {
+  div.item {
+    height: 280px;
+  }
+  
+  a.carousel-control{
+    height: 230px;
+  }
 }
-
-ul.slider li:target {
-    opacity: 1; /*Mostramos el <li> del enlace que pulsemos*/
+/*slider inicio*/
+img{
+  background-repeat: norepeat;
+    -webkit-animation: myfirst 20s; /* Chrome, Safari, Opera */
+    animation: myfirst 2000;
+    animation-play-state: running;
+    -webkit-animation-play-state: running;
+ 
 }
-
-.menu{
-  text-align: center;
-  /*margin: 20px;*/
+@-webkit-keyframes myfirst {
+  from {
+  background-position: bottom center;
+  background-size: cover;
+  }
+  to { 
+    background-position: top center;
+    background-size: cover;
+  }
 }
-
-.menu li{
-  display: inline-block;
-  text-align: center;
-}
-
-.menu li a{
-  display: inline-block;
-  color: black;
-  text-decoration: none;
-  background-color: grey;
-  margin-top: 2%;
-  padding: 15px;
-  width: 10px;
-  height: 5px;
-  font-size: 15px;
-  border-radius: 100%;
-}
-
-
 /*slider fin*/
-
 /*FOOTER INICIO*/
 /*footer-bar inicio*/
 .footer-bar {
