--- a/practicanoviembre/css/carrascal.css
+++ b/practicanoviembre/css/carrascal.css
@@ -13,7 +13,7 @@
 
 .fondorojo{
     background-color: #ff414d;
-    color: wheat;
+    color: white;
     font-weight: bold;
     font-size: 14px;
     text-align: left;
@@ -51,5 +51,66 @@ text-align: left;
 }
 
 .amarillo{
-    
+   color: #f0a500; 
 }
+
+.fondoamarillo{
+    background-color: #f0a500;
+    color: white;
+    font-weight: bold;
+    font-size: 14px;
+    text-align: left;
+    padding-left: 1%;
+}
+
+.morado{
+  color: #31112c;
+}
+
+.fondomorado{
+    background-color: #31112c;
+    color: white;
+    font-weight: bold;
+    font-size: 14px;
+    text-align: left;
+    padding-left: 1%;
+}
+
+.lineasup{
+    border-top: 1px solid lightgray;
+    height: 2px;   
+    padding: 0;
+    margin: 20px auto 0 auto;
+}
+
+.linearder{
+    border-right: 1px solid lightgray;
+}
+
+.lineaiz{
+    border-left: 1px solid lightgray;
+
+}
+.backrosa{
+    background-color: #fbdcc4;
+}
+
+.row1 {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+    visibility: hidden;
+  }
+  
+  /* Create four equal columns that sits next to each other */
+  .column {
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
+  }
+  
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+  }
